<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="calculator">计算器</string>
    <string name="mediaPlayer">播放器</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="back">back</string>
    <string name="sign">+/-</string>
    <string name="clear">C</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="reset">重放</string>
    <string name="cagwymhphone">公务员门户</string>
    <string name="game">游戏</string>
    <string name="layout">布局练习</string>
    

</resources>