<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalculatorActivity" >

    <TextView
        android:id="@+id/textView_expressions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView_inputNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_expressions" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_inputNumber"
        android:text="@string/add" />

    <Button
        android:id="@+id/button_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_inputNumber"
        android:layout_toRightOf="@+id/button_add"
        android:text="@string/sub" />

    <Button
        android:id="@+id/button_mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_inputNumber"
        android:layout_toRightOf="@+id/button_sub"
        android:text="@string/mul" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_inputNumber"
        android:layout_toRightOf="@+id/button_mul"
        android:text="@string/div" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_add"
        android:text="@string/seven" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_add"
        android:layout_toRightOf="@+id/button_seven"
        android:text="@string/eight" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_add"
        android:layout_toRightOf="@+id/button_eight"
        android:text="@string/nine" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_add"
        android:layout_toRightOf="@+id/button_nine"
        android:text="@string/back" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_seven"
        android:text="@string/four" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_seven"
        android:layout_toRightOf="@+id/button_four"
        android:text="@string/five" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_seven"
        android:layout_toRightOf="@+id/button_five"
        android:text="@string/six" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_seven"
        android:layout_toRightOf="@+id/button_six"
        android:text="@string/clear" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_four"
        android:text="@string/one" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_four"
        android:layout_toRightOf="@+id/button_one"
        android:text="@string/two" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_four"
        android:layout_toRightOf="@+id/button_two"
        android:text="@string/three" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_one"
        android:text="@string/zero" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_one"
        android:layout_toRightOf="@+id/button_zero"
        android:text="@string/point" />

    <Button
        android:id="@+id/button_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_one"
        android:layout_toRightOf="@+id/button_point"
        android:text="@string/sign" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_sign"
        android:layout_below="@+id/button_clear"
        android:layout_toRightOf="@+id/button_sign"
        android:text="@string/equal" />

</RelativeLayout>