<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_msg"
        android:layout_width="match_parent"
        android:layout_height="50px" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/surfaceView1"
        android:text="@string/play" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_play"
        android:layout_alignBottom="@+id/button_play"
        android:layout_toRightOf="@+id/button_play"
        android:text="@string/pause" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_pause"
        android:layout_alignBottom="@+id/button_pause"
        android:layout_toRightOf="@+id/button_pause"
        android:text="@string/stop" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_stop"
        android:layout_alignBottom="@+id/button_stop"
        android:layout_toRightOf="@+id/button_stop"
        android:text="@string/reset" />

    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="match_parent"
        android:layout_height="480px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_msg" />

</RelativeLayout>